gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TraineeNotFoundException.java
package com.example.gymcrm.api.rest.error.exception;

public class TraineeNotFoundException extends RuntimeException {
    public TraineeNotFoundException(String message) {
        super(message);
    }
}
